tests/snapshots/examples_fixtures/io__aoc_day12_haskell_style_using_modules.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day12_haskell_style_using_modules.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E018]: IMPORT NOT FOUND

Cannot find module `Modules.Day12Solver` to import.

  --> examples/io/aoc_day12_haskell_style_using_modules.flx:1:1
  |
1 | import Modules.Day12Solver as Day12
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Day12Solver.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Day12Solver` under roots: examples/io, src (imported from examples/io/aoc_day12_haskell_style_using_modules.flx).
== stdout ==
<not executed>
